# Arcade

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: gh-act.yaml
core/: CMakeLists.txt  Core.cpp  Core.hpp  Exception.hpp  Program.hpp  Saver.cpp  Saver.hpp  main.cpp
core/LibLoader/: CMakeLists.txt  DynamicLib.cpp  LibLoader.cpp  LibLoader.hpp  LoaderType.hpp
core/event/: CMakeLists.txt  EventModule.cpp  EventModule.hpp
core/games/: CMakeLists.txt  GameModule.cpp  GameModule.hpp
core/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp  MenuModule.cpp  MenuModule.hpp  MenuTitle.cpp  MenuTitle.hpp
core/window/: CMakeLists.txt  WindowModule.cpp  WindowModule.hpp
display/: CMakeLists.txt
display/NCURSES/: CMakeLists.txt  arcadeNCURSES.cpp  arcadeNCURSES.hpp  arcadeNCURSESEvent.cpp  arcadeNCURSESEvent.hpp  main.cpp
display/SDL/: CMakeLists.txt  SDLEncapsulation.cpp  SDLEncapsulation.hpp  arcadeSDL.cpp  arcadeSDL.hpp  arcadeSDLEvent.cpp  arcadeSDLEvent.hpp  main.cpp
display/SFML/: CMakeLists.txt  arcadeSFML.cpp  arcadeSFML.hpp  arcadeSFMLEvent.cpp  arcadeSFMLEvent.hpp  main.cpp
display/Xlib/: CMakeLists.txt  XlibEncapsulation.cpp  XlibEncapsulation.hpp  arcadeXlib.cpp  arcadeXlib.hpp  arcadeXlibEvent.cpp  arcadeXlibEvent.hpp  main.cpp
display/allegro/: AllegroEncapsulation.cpp  AllegroEncapsulation.hpp  CMakeLists.txt  arcadeAllegro.cpp  arcadeAllegro.hpp  arcadeAllegroEvent.cpp  arcadeAllegroEvent.hpp  main.cpp
display/caca/: CMakeLists.txt  arcadeCaca.cpp  arcadeCaca.hpp  arcadeCacaEvent.cpp  arcadeCacaEvent.hpp  main.cpp
display/ncurses/: CMakeLists.txt  NcursesEncapsulation.cpp  NcursesEncapsulation.hpp  arcadeNcurses.cpp  arcadeNcurses.hpp  arcadeNcursesEvent.cpp  arcadeNcursesEvent.hpp  arcadeNcursesWrapper.cpp  arcadeNcursesWrapper.hpp  main.cpp
display/qt5/: ArcadeCanvas.cpp  ArcadeCanvas.hpp  CMakeLists.txt  arcadeQT.cpp  arcadeQT.hpp  arcadeQTEvent.cpp  arcadeQTEvent.hpp  main.cpp
games/: CMakeLists.txt  GameTemplate.cpp  GameTemplate.hpp
games/entities/: AEntity.cpp  AEntity.hpp  BigTextEntityHUD.cpp  BigTextEntityHUD.hpp  CMakeLists.txt  HighScoreEntityHUD.cpp  HighScoreEntityHUD.hpp  ScoreEntityHUD.cpp  ScoreEntityHUD.hpp  TextEntityHUD.cpp  TextEntityHUD.hpp  TimeEntityHUD.cpp  TimeEntityHUD.hpp  TimerEntityHUD.cpp  TimerEntityHUD.hpp  VoidEntity.cpp  VoidEntity.hpp
games/menu/: CMakeLists.txt  Menu.hpp  main.cpp
games/minesweeper/: CMakeLists.txt  Cell.cpp  Cell.hpp  MinesweeperGame.cpp  MinesweeperGame.hpp  main.cpp
games/nibbler/: CMakeLists.txt  FoodEntity.cpp  FoodEntity.hpp  MapManager.cpp  MapManager.hpp  NibblerGame.cpp  NibblerGame.hpp  NibblerHeadEntity.cpp  NibblerHeadEntity.hpp  NibblerTailEntity.cpp  NibblerTailEntity.hpp  WallEntity.cpp  WallEntity.hpp  main.cpp
games/pacman/: BigDotEntity.cpp  BigDotEntity.hpp  CMakeLists.txt  CyanGhost.cpp  CyanGhost.hpp  DotEntity.cpp  DotEntity.hpp  GhostEntity.cpp  GhostEntity.hpp  OrangeGhost.cpp  OrangeGhost.hpp  PacmanEntity.cpp  PacmanEntity.hpp  PacmanGame.cpp  PacmanGame.hpp  PinkGhost.cpp  PinkGhost.hpp  RedGhost.cpp  RedGhost.hpp  WallEntity.cpp  WallEntity.hpp  main.cpp
games/snake/: AppleEntity.cpp  AppleEntity.hpp  CMakeLists.txt  SnakeBodyEntity.cpp  SnakeBodyEntity.hpp  SnakeGame.cpp  SnakeGame.hpp  SnakeHeadEntity.cpp  SnakeHeadEntity.hpp  main.cpp
include/: AGameModule.hpp  DynamicLib.hpp  Exception.hpp  IEntity.hpp  IEvent.hpp  IGameModule.hpp  IMenu.hpp  IMenuModule.hpp  IWindow.hpp
libCACA/: CMakeLists.txt  arcadeCaca.cpp  arcadeCacaEvent.cpp  arcadeCacaEvent.hpp  arcade_caca.cpp  arcade_caca.hpp  main.cpp
menu/: CMakeLists.txt  Menu.cpp  Menu.hpp  main.cpp
shell/: clrRepo.sh  cmpDebug.sh  cmpRelease.sh  functionalTests.sh  generateDoc.sh  run_tests.sh
src/: CMakeLists.txt  Exception.hpp  Program.cpp  Program.hpp  main.cpp
src/LibLoader/: CMakeLists.txt  LibLoader.cpp  LibLoader.hpp  LoaderType.hpp
src/entities/: AEntity.cpp  AEntity.hpp  CMakeLists.txt
src/event/: CMakeLists.txt  EventModule.cpp  EventModule.hpp
src/games/: AGameModule.hpp  CMakeLists.txt  GameModule.cpp  GameModule.hpp
src/window/: CMakeLists.txt  WindowModule.cpp  WindowModule.hpp
tests/functional/: Colors.py  Parser.py  TestCase.py  Tester.py  Utils.py  config.json
tests/functional/tests/: arguments.json
