cmake_minimum_required(VERSION 3.25)
project(Arcade)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
set(CMAKE_CXX_STANDARD 17)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
add_compile_options("-fno-gnu-unique")

add_subdirectory(display)
add_subdirectory(games)
add_subdirectory(core)

target_include_directories(arcade PRIVATE include)
target_include_directories(EventModule PRIVATE include)
target_include_directories(GameModule PRIVATE include)
target_include_directories(WindowModule PRIVATE include)
target_include_directories(LibLoader PRIVATE include)
target_include_directories(arcade_snake PRIVATE include)
target_include_directories(arcade_sfml PRIVATE include)
target_include_directories(arcade_sdl2 PRIVATE include)
target_include_directories(arcade_caca PRIVATE include)
target_include_directories(arcade_menu PRIVATE include)
